@@ -1,5 +1,7 @@
 *SVN*
 
+* update_all can take a Hash argument. sanitize_sql splits into two methods for conditions and assignment since NULL values and delimiters are handled differently.  #6583, #7365 [sandofsky, Assaf]
+
 * MySQL: SET SQL_AUTO_IS_NULL=0 so 'where id is null' doesn't select the last inserted id.  #6778 [Jonathan Viney, timc]
 
 * Use Date#to_s(:db) for quoted dates.  #7411 [Michael Schoen]
